# Libsum

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: basic_usage.py
tests/: conftest.py  test_analyzer.py  test_extractor.py  test_nn.py  test_nn_models.py  test_pipeline.py  test_providers.py  test_summarizer.py
videosum/: __init__.py  analyzer.py  extractor.py  models.py  pipeline.py  summarizer.py  transcriber.py  utils.py
videosum/nn/: __init__.py  frame_caption_net.py  tokenizer.py  train_caption.py  train_summary.py  video_summary_net.py
videosum/providers/: __init__.py  base.py  claude.py  neural.py  ollama.py  registry.py
